Minor edits to CSS and JS files, and added deployed GitHub Pages URL to README

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <div class="container">
 
-  <!-- Time-blocks are as follows-->
+  <!-- Time-blocks from 9am to 5pm are as follows-->
 
     <section class="row time-block">
       <h4 class="col-2 hour">9 AM</h4>
@@ -79,7 +79,7 @@
       <button class="col-2 saveBtn"><i class="fas fa-lock"></i></button>
     </section>
   </div>
-  
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="./Assets/js/script.js"></script>
